hphp/hack/test/typecheck/reserved_name10.php.exp
File "reserved_name10.php", line 5, characters 7-11:
Float cannot be used as it is reserved. (Naming[2068])
