hphp/hack/test/typecheck/reserved_name10.php
<?hh

namespace Foo;

class Float {}
